; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ksz884x.c_ksz_stop_timer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ksz884x.c_ksz_stop_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ksz_timer_info = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ksz_timer_info*)* @ksz_stop_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ksz_stop_timer(%struct.ksz_timer_info* %0) #0 {
  %2 = alloca %struct.ksz_timer_info*, align 8
  store %struct.ksz_timer_info* %0, %struct.ksz_timer_info** %2, align 8
  %3 = load %struct.ksz_timer_info*, %struct.ksz_timer_info** %2, align 8
  %4 = getelementptr inbounds %struct.ksz_timer_info, %struct.ksz_timer_info* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load %struct.ksz_timer_info*, %struct.ksz_timer_info** %2, align 8
  %9 = getelementptr inbounds %struct.ksz_timer_info, %struct.ksz_timer_info* %8, i32 0, i32 1
  store i64 0, i64* %9, align 8
  %10 = load %struct.ksz_timer_info*, %struct.ksz_timer_info** %2, align 8
  %11 = getelementptr inbounds %struct.ksz_timer_info, %struct.ksz_timer_info* %10, i32 0, i32 0
  %12 = call i32 @del_timer_sync(i32* %11)
  br label %13

13:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @del_timer_sync(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
